# RubixEngine

./: CMakeLists.txt  README.md  RubiksCube.cpp  RubiksCube.h  RubiksCube1D.cpp  RubiksCube3d.cpp  RubiksCubeBitBoard.cpp  RubixEngine.sln  RubixEngine.vcxproj  packages.config
